# PCL_Hole_Detection

./: CMakeLists.txt  README.md  main.cpp
inc/: bdr_angle.hpp  bdr_weighted_avg.hpp  kruskal_mst.hpp  main.hpp  surface_calculation.hpp  utils.hpp
include/uqtr_zone_coverage_evaluation/: bdr_angle.hpp  bdr_weighted_avg.hpp  kruskal_mst.hpp  surface_calculation.hpp  utils.hpp
src/: bdr_angle.cpp  bdr_weighted_avg.cpp  kruskal_mst.cpp  surface_calculation.cpp  utils.cpp
